--- a/pages/Task.module.css
+++ b/pages/Task.module.css
@@ -620,6 +620,11 @@
     z-index: 0;
     position: relative;
   }
+
+  .table thead td:nth-child(2) {
+    padding-top: 6px;
+  }
+
   .table__section-wrapper__data {
     font-size: 0.8rem;
   }
@@ -686,6 +691,10 @@
 
   .header__left select {
     width: 510px;
+  }
+
+  .table thead td:nth-child(2) {
+    padding-top: 6px;
   }
 
   .table thead td {
